...
        android:layout_height="wrap_content" />




    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:text="Password"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/bLogin"
        android:text="Login"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



...
