<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:weightSum="2">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:id="@+id/task_item_checkBox" />

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:clickable="true"
        android:weightSum="2"
        android:backgroundTintMode="src_over"
        android:layout_weight="1.89">

        <TextView
            android:id="@+id/task_item_view_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="28sp"
            android:text="Some example text"
            android:maxLines="1"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:checked="true" />

        <SeekBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:id="@+id/task_item_view_progress"/>

    </LinearLayout>

    <Button
        android:id="@+id/task_item_view_delete"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="Delete"
        android:layout_width="wrap_content" />

</LinearLayout>
