...
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="sendMessageCalendar"
            android:textColor="@android:color/holo_blue_dark"/>

        <Button
            android:text="To-Do List"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:id="@+id/button19"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="sendMessageToDo"
            android:textColor="@android:color/holo_green_light"/>

        <Button
            android:text="Password Manager"
...
